--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "typescript": "~5.7.2",
     "vite": "^6.3.1"
   },
   "dependencies": {
     "axios": "^1.9.0",
-    "phaser": "^3.88.2"
+    "phaser": "^3.88.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   }
 }
